# ai-ir-programming-system

./: .env.example  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  GOOD_FIRST_ISSUES.md  LAUNCH_CHECKLIST.md  LICENSE  README.md  RELEASE_NOTES_v0.md  ROADMAP.md  STATUS.md  Torqa.code-workspace  docker-compose.yml  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/workflows/: ci.yml  dashboard-accessibility.yml  dashboard-e2e.yml  release.yml
charts/torqa/: Chart.yaml  values.yaml
compat/: __init__.py  canonical_ir.py  capability_registry.py  control_layer.py  editor_core.py  engine_routing.py  internal_application_shell.py  internal_tooling.py  ir_edit_engine.py  ir_execution.py  ir_mutation.py  ir_optimizer.py  ir_semantics.py  kural_parser.py  platform_controller.py  projection_graph.py  projection_strategy.py  rust_bridge.py  self_evolution.py  self_hosting.py  system_orchestrator.py  torqa_cli.py
dashboard/: README.md  eslint.config.mjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  vitest.config.ts
dashboard/design-reference/: Torqa Dashboard v2.html  Torqa Landing.html  colors_and_type.css
dashboard/e2e/: a11y-axe.spec.ts  alert-flow.spec.ts  audit-log.spec.ts  critical-flows.spec.ts  schedule-flow.spec.ts  smoke.spec.ts
dashboard/public/: openapi.yaml
dashboard/src/: middleware.ts  proxy.ts
desktop/: README.md  __init__.py  __main__.py  index.html  package-lock.json  package.json  tk_shell.py  tsconfig.json  vite.config.ts  workspace_io.py
desktop/electron/: demoSeed.ts  fsSafe.ts  main.ts  paths.ts  preload.ts  torqaSpawn.ts  torqaTypes.ts
desktop/src/: App.tsx  global.d.ts  index.css  main.tsx  parseTorqaJson.test.ts  parseTorqaJson.ts  torqaApi.ts
desktop_legacy/: README.md  __init__.py  __main__.py  tk_shell.py
docs/: AEM_SPEC.md  AI_BOUNDARY.md  AI_FIRST_PROMPT_PLAYBOOK.md  AI_GENERATION_PROFILE.md  AI_NATIVE_LANGUAGE_CHARTER.md  ARCHITECTURE_RULES.md  BENCHMARK_COMPRESSION.md  BENCHMARK_FLAGSHIP.md  CHECKPOINT_POLICY.md  CODEGEN_INVENTORY.md  CORE_POSITIONING.md  CORE_SPEC.md  DEMO_LOCALHOST.md  DEMO_SURFACES.md  DEPRECATION_MAP.md  DOC_MAP.md  ENGINE_ROUTING.md  F1_F2_GAP.md  FAILURE_MODES.md  FIRST_PROJECT.md  FIRST_REAL_DEMO.md  FLAGSHIP_DEMO.md  FORMAL_CORE.md  IMPLEMENTATION_STATUS.md  MAINTAINER_VERIFY.md  P71_DESKTOP_OFFICIAL.md  P72_WEBSITE_OFFICIAL.md  P73_PRODUCT_SURFACES.md  PACKAGE_SPLIT.md  PRODUCTION_READINESS.md  PROOF_SUMMARY.md  PROTOTYPE_SECURITY.md  QUICKSTART.md  SELF_EVOLUTION_PIPELINE.md  SELF_HOST_MAP.md  SUPPORTED_SCOPE.md  SURFACE_CLASSIFICATION.md  TEMPLATE_preview_package.md  TOKEN_PROOF.md  TORQA_DOMINANCE.md  (+45 more)
docs/archive/: INDEX.md  README.md  v3_ecosystem_architecture.md  v3_orchestration_notes.md  v4_cleanup_and_deprecation_plan.md  v4_internal_tooling_notes.md  v4_self_sustaining_architecture.md
docs/images/: README.md
docs/integrations/: n8n.md
docs/reports/: RELEASE_NOTES_v0.md  SELF_TEST_REPORT.md
e2e/: enforcement-webhooks.spec.ts
editors/vscode-torqa/: README.md  package.json  tasks.json
examples/: README.md  ai_generated.json  ai_guardrail.md  ci_check.md
examples/ai_output_validation/: README.md
examples/automation/: README.md  gated_second_step.tq  two_step_chain.tq
examples/benchmark_flagship/: BENCHMARK_TASK.md  README.md  app.tq  compression_baseline_report.json  expected_output_summary.json
examples/benchmarks/: README.md
examples/core/: consumes_torqa_demo_lib.json  demo_multi_surface_flow.json  valid_login_flow.json  valid_session_postcondition_flow.json
examples/data_pipelines/: README.md  filter_conditions.tq  map_fields.tq  normalize_input.tq
examples/self_test_broken/: README.md
examples/surface/: minimal.pxir
examples/torqa/: README.md  auth_login.tq  example_include_chained.tq  projection_stub_paths_policy.tq  projection_stub_paths_policy_bundle.json  semantic_warning_policy.tq  semantic_warning_policy_bundle.json  signin_flow.tq
examples/torqa_demo_site/: README.md  app.tq
examples/torqa_self/: README.md  cli_suggested_next_merge_cap.tq  cli_surface_project_fail_suffix.tq  cli_surface_project_fail_suffix_bundle.json  cli_validate_open_hints.tq  cli_validate_open_hints_bundle.json
examples/trial_ready/: README.md  trial_run.ps1  trial_run.sh
examples/validation_stress/: README.md  manifest.json
examples/workflows/: README.md  approval_flow.tq  customer_onboarding.tq  decision_tree.tq  document_approval.tq  intake_form.tq
examples/workspace_minimal/: README.md  (+1 more)
reports/: benchmark_initial.json  failure_types.json  retry_stats.json  token_proof.json  validation_gate.json
rust-core/: Cargo.toml
scripts/: run_compression_benchmark.py  validate_bundle.py
spec/: IR_BUNDLE.schema.json
src/: __init__.py  project_materialize.py  torqa_desktop_launcher.py  torqa_public.py  workspace_bundle_io.py
supabase/: README.md
tests/: test_adapter_registry.py  test_aem_execution.py  test_ai_output_validation_examples.py  test_ai_proposal_gate.py  test_analysis_rules.py  test_authoring_prompt.py  test_automation_examples.py  test_benchmark_flagship_p31.py  test_benchmark_initial_report.py  test_bundle_and_report_types.py  test_bundle_load.py  test_cli.py  test_cli_check.py  test_cli_compare.py  test_cli_explain.py  test_cli_init.py  test_cli_json.py  test_cli_project_f1.py  test_cli_report.py  test_cli_scan.py  test_compression_benchmark_p32.py  test_consumes_demo_lib_bundle.py  test_core.py  test_data_pipelines_examples.py  test_desktop_materialize.py  test_desktop_torqa_contract.py  test_desktop_workspace_io.py  test_diagnostics.py  test_diagnostics_quality.py  test_examples_starter.py  test_extra_projection_hook.py  test_failure_buckets.py  test_failure_types_report.py  test_first_real_demo.py  test_flagship_demo_p35.py  test_formal_phases.py  test_gate_proof_p33.py  test_golden_ir.py  test_governance_report_builder.py  test_ir_canonical_order_validation.py  (+43 more)
website/: README.md  __init__.py  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
webui/: __main__.py  app.py
(+457 files in other folders)
