[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "torqa"
version = "1.0.0"
description = "TORQA: AI-native core language — semantic-first, validation-oriented, projection-ready"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-dotenv>=1.0.0",
    "jsonschema>=4.23.0",
]

[project.optional-dependencies]
# Placeholder for npm/vite-adjacent tooling; core tests do not require Node.
preview-web = []
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "jsonschema>=4.23.0",
]
# Native desktop is Electron under ``desktop/`` (``torqa-desktop``); optional pywebview extra kept for experiments.
desktop = []
desktop-webview = [
    "pywebview>=4.4; sys_platform != 'win32'",
]

[project.scripts]
torqa = "src.cli.main:main"
torqa-console = "website.server.main:main"
torqa-desktop = "src.torqa_desktop_launcher:main"
torqa-compression-bench = "src.benchmarks.cli:main"
torqa-token-measure = "src.benchmarks.token_measurement_cli:main"
torqa-token-proof = "src.benchmarks.token_proof_cli:main"
torqa-benchmark-initial = "src.benchmarks.benchmark_initial_cli:main"
torqa-validation-gate = "src.benchmarks.validation_gate_cli:main"
torqa-retry-stats = "src.benchmarks.retry_stats_cli:main"
torqa-failure-types = "src.benchmarks.failure_types_cli:main"
torqa-gate-proof = "src.benchmarks.gate_proof_cli:main"
# Legacy standalone script; same text as ``torqa demo`` / ``torqa demo verify``. Prefer the main CLI.
torqa-flagship = "src.benchmarks.flagship_demo_cli:main"

[tool.setuptools.packages.find]
where = ["."]
# Electron app under ``desktop/`` is not a Python package; launched via ``torqa-desktop``.
include = ["src*", "website*", "compat*", "torqa*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
