[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "torqa"
version = "0.2.0"
description = "Canonical workflow IR (ir_goal), validation, trust profiles, and CLI — gate specs before execution."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [{ name = "Torqa contributors" }]
keywords = [
    "workflow",
    "specification",
    "intermediate-representation",
    "validation",
    "ir",
    "json-schema",
    "automation",
    "tq",
    "ai-native",
    "trust",
    "policy",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "rich>=13.7.0,<16",
    'tomli>=2.0.0; python_version < "3.11"',
]

[project.urls]
Homepage = "https://github.com/kadireren7/Torqa"
Documentation = "https://github.com/kadireren7/Torqa#readme"
Repository = "https://github.com/kadireren7/Torqa"
Issues = "https://github.com/kadireren7/Torqa/issues"
Changelog = "https://github.com/kadireren7/Torqa/blob/main/CHANGELOG.md"
Releasing = "https://github.com/kadireren7/Torqa/blob/main/docs/release-process.md"
PyPI = "https://pypi.org/project/torqa/"
Security = "https://github.com/kadireren7/Torqa/security/policy"

[project.scripts]
torqa = "torqa.cli.main:main"

[project.optional-dependencies]
# Minimal deps to run the test suite (CI, contributors who skip full dev tools)
test = [
    "pytest>=8.0.0",
    "jsonschema>=4.23.0",
]
# Local development: editable install + tests + linter
dev = ["torqa[test]", "ruff>=0.8.0,<1"]
# Maintainership: build artifacts and optional manual upload checks
release = [
    "build>=1.2.0",
    "twine>=5.0.0",
    "torqa[test]",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["torqa*"]

[tool.setuptools.package-data]
torqa = ["py.typed", "data/*.json", "bundled/**/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
# Practical default: correctness + unused imports/names; no style refactors.
select = ["E4", "E7", "E9", "F"]
ignore = []

